# xiaoe-downloader

./: .gitignore  AGENTS.md  README.md  config.toml  pyproject.toml
src/xiaoe_downloader/: __init__.py  __main__.py  cli.py  config.py
src/xiaoe_downloader/slides/: __init__.py  browser.py  catalog.py  collector.py  downloads.py  manifest.py  models.py  naming.py  pdf.py  scraper.py
src/xiaoe_downloader/video/: __init__.py  downloader.py  extractor.py  naming.py
tests/: test_cli_config.py  test_cli_entrypoints.py  test_config.py  test_slides.py  test_slides_pdf.py  test_video_urls.py
